--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@indoorequal/vue-maplibre-gl": "^7.7.1",
+    "@maptiler/sdk": "^2.4.0",
     "@nuxt/icon": "^1.5.2",
-    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@nuxtjs/leaflet": "^1.2.3",
     "@pinia/nuxt": "^0.5.5",
     "@prisma/nuxt": "^0.0.35",
     "@radix-icons/vue": "^1.0.0",
+    "@shadcn/ui": "^0.0.4",
     "@studio-freight/lenis": "^1.0.42",
+    "@tanstack/vue-table": "^8.20.5",
+    "@vee-validate/zod": "^4.14.6",
     "@yeger/vue-masonry-wall": "^5.0.15",
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
@@ -23,11 +28,15 @@
     "formidable": "^3.5.1",
     "gsap": "^3.12.5",
     "icones": "^1.0.0",
+    "leaflet": "^1.9.4",
+    "maplibre-gl": "^4.7.1",
     "masonry-layout": "^4.2.2",
     "multer": "^1.4.5-lts.1",
     "nuxt": "^3.13.0",
     "nuxt-gsap": "^0.1.4",
     "nuxt-locomotive-scroll": "^0.0.1",
+    "nuxt-mapbox": "^1.6.1",
+    "nuxt-maplibre": "^1.0.0",
     "nuxt-masonry": "^0.0.1",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.2.4",
@@ -39,12 +48,15 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.14.6",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@hypernym/nuxt-gsap": "^2.4.3",
     "@iconify-json/flag": "^1.2.2",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@prisma/client": "^5.21.1",
     "@types/busboy": "^1.5.4",
     "@types/formidable": "^3.4.5",
