--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "formidable": "^3.5.1",
     "gsap": "^3.12.5",
+    "http-proxy-middleware": "^3.0.3",
     "icones": "^1.0.0",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^4.7.1",
@@ -55,7 +56,11 @@
   },
   "devDependencies": {
     "@hypernym/nuxt-gsap": "^2.4.3",
+    "@iconify-json/carbon": "^1.2.4",
     "@iconify-json/flag": "^1.2.2",
+    "@iconify-json/hugeicons": "^1.2.1",
+    "@iconify-json/material-symbols": "^1.2.5",
+    "@iconify-json/pixelarticons": "^1.2.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@prisma/client": "^5.21.1",
     "@types/busboy": "^1.5.4",
