--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "@iconify-json/hugeicons": "^1.2.1",
     "@iconify-json/material-symbols": "^1.2.5",
     "@iconify-json/pixelarticons": "^1.2.1",
+    "@iconify-json/si": "^1.2.2",
+    "@iconify-json/streamline": "^1.2.1",
+    "@iconify-json/uil": "^1.2.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@prisma/client": "^5.21.1",
     "@types/busboy": "^1.5.4",
